--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,11 @@
 requires = ["briefcase"]
 
 [project]
-name = "liverecorder"
-version = "1.0.0"
-description = "基于Streamlink的全自动直播录制工具"
+name = "LiveRecorder"
+version = "1.1.0"
+description = "一款全自动直播录制工具"
 authors = [
-    { name = "Your Name", email = "your.email@example.com" }
+    { name = "kevin", email = "kevin@gmail.com" }
 ]
 license = "MIT"
 requires-python = ">=3.8"
@@ -25,15 +25,15 @@ dependencies = [
 [tool.briefcase]
 project_name = "LiveRecorder"
 bundle = "com.example"
-version = "1.0.0"
-url = "https://github.com/yourusername/liverecorder"
+version = "1.1.0"
+url = "https://www.github.com"
 license = "MIT"
-author = "Your Name"
-author_email = "your.email@example.com"
+author = "LiveRecorder"
+author_email = "kevin@gmail.com"
 
 [tool.briefcase.app.liverecorder]
 formal_name = "LiveRecorder"
-description = "基于Streamlink的全自动直播录制工具"
+description = "一款全自动直播录制工具"
 icon = "utils/icon.ico"
 sources = ["src/liverecorder"]
 requires = [
